# hoverbot-new

./: .gitignore  CMakeLists.txt  README.md
groundstation/app/: main.py
groundstation/hoverbotRadioStation/: hoverbotRadioStation.ino
include/interfaces/OLED/: SSD1306.hpp
include/interfaces/UART/: UART.hpp
include/misc/exec/: exec.hpp
include/misc/logs/: log.hpp
include/modules/codePlugins/: interface.hpp  loader.hpp
include/movement/: PID.hpp  engines.hpp  movement.hpp
include/sensors/: gyro.hpp
include/sensors/rotation/: gyro.hpp  magnetometer.hpp
include/update/: update.hpp
mods/: CMakeLists.txt  test.cpp
periferials/: Readme.md  extensions pinout.txt  extensions_protocol.txt
periferials/periferial_controller/: extensions_periferial_controller.ino  periferial_controller.ino
raspberry/: CMakeLists.txt
raspberry/include/: uart.hpp
raspberry/include/movement/: PID.hpp
raspberry/include/navigation/: navVideo.hpp
raspberry/src/: main.cpp  uart.cpp
raspberry/src/movement/: PID.cpp  engines.cpp  movement.cpp
raspberry/src/navigation/: navVideo.cpp
raspberry/src/sensors/: gyro.cpp
src/: main.cpp
src/interfaces/OLED/: SSD1306.cpp
src/interfaces/UART/: UART.cpp
src/misc/exec/: exec.cpp
src/misc/logs/: log.cpp
src/modules/codePlugins/: loader.cpp
src/movement/: PID.cpp  engines.cpp  movement.cpp
src/sensors/: gyro.cpp
src/sensors/rotation/: gyro.cpp  magnetometer.cpp
src/update/: update.cpp
